[package]
name = 'pallet-crowdloan-claim'
description = 'Module for processing crowdloan claim rewards.'
authors = ['The Centrifugians Tribe']
edition = '2018'
homepage = 'https://centrifuge.io'
license = "LGPL-3.0"
repository = 'https://github.com/centrifuge/centrifuge-chain'
version = '2.0.0'

[package.metadata.docs.rs]
targets = ['x86_64-unknown-linux-gnu']

[dependencies]
codec = { package = "parity-scale-codec", version = "2.0.0", default-features = false }
frame-support = { branch = "polkadot-v0.9.3", git = "https://github.com/paritytech/substrate.git", default-features = false }
frame-system = { branch = "polkadot-v0.9.3", git = "https://github.com/paritytech/substrate.git", default-features = false }
frame-benchmarking = { branch = "polkadot-v0.9.3", git = "https://github.com/paritytech/substrate.git", default-features = false, optional = true }
log = { version = "0.4.14", default-features = false }
pallet-balances = { branch = "polkadot-v0.9.3", git = "https://github.com/paritytech/substrate.git", default-features = false }
sp-core = { branch = "polkadot-v0.9.3", git = "https://github.com/paritytech/substrate.git", default-features = false }
sp-runtime = { branch = "polkadot-v0.9.3", git = "https://github.com/paritytech/substrate.git", default-features = false }
sp-std = { branch = "polkadot-v0.9.3", git = "https://github.com/paritytech/substrate.git", default-features = false }
sc-rpc-api = { branch = "polkadot-v0.9.3", git = "https://github.com/paritytech/substrate.git", default-features = false }
sp-state-machine = {branch = "polkadot-v0.9.3", git = "https://github.com/paritytech/substrate.git", default-features = false }
sp-trie = {branch = "polkadot-v0.9.3", git = "https://github.com/paritytech/substrate.git", default-features = false }
lazy_static = "1.4.0"
serde = { version = "1.0.119" }
pallet-crowdloan-claim-reward = { path='./crowdloan-claim-reward', default-features = false }


[dev-dependencies]
sp-io = { branch = "polkadot-v0.9.3", git = "https://github.com/paritytech/substrate.git", default-features = false }
sp-trie = { branch = "polkadot-v0.9.3", git = "https://github.com/paritytech/substrate.git", default-features = false }
sp-keyring = { branch = "polkadot-v0.9.3", git = "https://github.com/paritytech/substrate.git", default-features = false }
pallet-vesting = { branch = "polkadot-v0.9.3", git = "https://github.com/paritytech/substrate.git", default-features = false }
pallet-crowdloan-reward = { path='../crowdloan-reward', default_features = false }
hex = { version="0.4.3", default_features = false }


[features]
default = ['std']
std = [
  'codec/std',
  'frame-support/std',
  'frame-system/std',
  'log/std',
  'pallet-balances/std',
  'pallet-vesting/std',
  'pallet-crowdloan-reward/std',
  'sp-std/std',
]

runtime-benchmarks = ["frame-benchmarking"]